Remove cards without templates and style the template cards

--- a/main.html
+++ b/main.html
@@ -189,89 +189,10 @@
     </div>
 
     <div class="container mx-auto">
-        <div class="row d-flex justify-content-center align-items-center">
-            <div class="col-md-3 mb-4">
-                <div class="card mx-auto" style="width: 18rem">
-                    <img src="./images/chicken.png" class="card-img-top" alt="..."
-                        style="height: 200px; width: 100%; object-fit: cover" />
-                    <div class="card-body">
-                        <h5 class="card-title text-center">Chicken</h5>
-                        <ul class="card-text">
-                            <li>Store Location: Save on Foods</li>
-                            <li>Original Price: $7.99 per lb</li>
-                            <li>Deal Offer: $5.99 per lb</li>
-                        </ul>
-                        <div class="d-flex justify-content-center">
-                            <a href="#" class="btn btn-success">Buy Now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-3 mb-4">
-                <div class="card mx-auto" style="width: 18rem">
-                    <img src="./images/potato.png" class="card-img-top" alt="..."
-                        style="height: 200px; width: 100%; object-fit: cover" />
-                    <div class="card-body">
-                        <h5 class="card-title text-center">Potatoes</h5>
-                        <ul class="card-text">
-                            <li>Store Location: Walmart</li>
-                            <li>Original Price: $2.99 per bag</li>
-                            <li>Deal Offer: $2.49 per bag</li>
-                        </ul>
-                        <div class="d-flex justify-content-center">
-                            <a href="#" class="btn btn-success">Buy Now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-3 mb-4">
-                <div class="card mx-auto" style="width: 18rem">
-                    <img src="./images/milk.png" class="card-img-top" alt="..."
-                        style="height: 200px; width: 100%; object-fit: cover" />
-                    <div class="card-body">
-                        <h5 class="card-title text-center">Milk</h5>
-                        <ul class="card-text">
-                            <li>Store Location: Costco</li>
-                            <li>Original Price: $2.19 per lb</li>
-                            <li>Deal Offer: $1.99 per gallon</li>
-                        </ul>
-                        <div class="d-flex justify-content-center">
-                            <a href="#" class="btn btn-success">Buy Now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-3 mb-4">
-                <div class="card mx-auto" style="width: 18rem">
-                    <img src="./images/cabbage.png" class="card-img-top" alt="..."
-                        style="height: 200px; width: 100%; object-fit: cover" />
-                    <div class="card-body">
-                        <h5 class="card-title text-center">Cabbage</h5>
-                        <ul class="card-text">
-                            <li>Store Location: Urban Fare</li>
-                            <li>Original Price: $3.99 each</li>
-                            <li>Deal Offer: $3.49 each</li>
-                        </ul>
-                        <div class="d-flex justify-content-center">
-                            <a href="#" class="btn btn-success">Buy Now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="container">
-                <div id="deals-go-here" class="row row-cols-auto"></div>
-            </div>
-        </div>
-    </div>
-    <div class="container">
         <div id="deals-popup-here"></div>
     </div>
     <div class="container">
-        <div id="deals-go-here" class="row row-cols-auto"></div>
+        <div id="deals-go-here" class="row row-cols-auto  justify-content-center"></div>
     </div>
 
     <footer class="navbar fixed-bottom d-md-none bg-success">
