Prevent access to features if not signed in

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav d-none d-lg-flex">
                     <li class="nav-item">
-                        <a class="nav-link" href="shoppinglist.html">
+                        <a class="nav-link" href="#">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
                                 stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="28"
                                 height="28" stroke-width="1.5">
@@ -155,7 +155,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="favourites.html">
+                        <a class="nav-link" href="#">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
                                 stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="28"
                                 height="28" stroke-width="1">
