Update link references

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             <div class="d-flex justify-content-center" id="navbarNavAltMarkup">
                 <div class="d-flex text-white">
                     <a class="nav-link active d-flex flex-column pe-5 align-items-center" aria-current="page"
-                        href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                        href="./main.html"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="45" height="45"
                             stroke-width="1">
                             <path d="M5 12l-2 0l9 -9l9 9l-2 0"></path>
