--- a/main.html
+++ b/main.html
@@ -106,7 +106,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
         <div class="container-fluid">
             <!-- Brand -->
-            <a class="navbar-brand active" href="#">
+            <a class="navbar-brand active" href="./main.html">
                 <img src="./images/hound_white.png" height="36" alt="" />
             </a>
             <form class="d-flex me-auto" role="search">
@@ -201,7 +201,7 @@
             <div class="d-flex justify-content-center" id="navbarNavAltMarkup">
                 <div class="d-flex text-white">
                     <a class="nav-link active d-flex flex-column pe-5 align-items-center" aria-current="page"
-                        href="main.html"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                        href="./main.html"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="45" height="45"
                             stroke-width="1">
                             <path d="M5 12l-2 0l9 -9l9 9l-2 0"></path>
