--- a/favourites.html
+++ b/favourites.html
@@ -57,7 +57,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
       <div class="container-fluid">
         <!-- Brand -->
-        <a class="navbar-brand active" href="#">
+        <a class="navbar-brand active" href="./main">
           <img src="./images/hound_white.png" height="36" alt="" />
         </a>
         <form class="d-flex me-auto" role="search">
@@ -92,7 +92,7 @@
         >
           <ul class="navbar-nav d-none d-lg-flex">
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="./shoppinglist.html">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   viewBox="0 0 24 24"
@@ -118,7 +118,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="./favourites.html">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   viewBox="0 0 24 24"
