--- a/favourites.html
+++ b/favourites.html
@@ -57,7 +57,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
       <div class="container-fluid">
         <!-- Brand -->
-        <a class="navbar-brand active" href="./main">
+        <a class="navbar-brand active" href="./main.html">
           <img src="./images/hound_white.png" height="36" alt="" />
         </a>
         <form class="d-flex me-auto" role="search">
