--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -167,7 +167,7 @@
 
     <!-- Main container -->
     <!-- <div class="container d-flex flex-column flex-wrap my-4 mx-auto"> -->
-    <div class="row">
+    <div class="row mx-3 my-3">
       <div class="col-12 col-md-6">
         <!-- left column -->
         <div class="d-flex flex-column justify-content-start">
