Add icons for adding to shopping list

--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -189,8 +189,9 @@
               <!-- printer button -->
               <button
                 id="print"
-                class="btn btn-success"
+                class="btn btn-success mx-1"
                 type="button"
+                onclick="window.print()
                 style="margin-left: 5px"
               >
                 <!-- Printer Icon -->
@@ -218,9 +219,8 @@
               <!-- clearlist button -->
               <button
                 id="clearList"
-                class="btn btn-success"
+                class="btn btn-success mx-1"
                 type="button"
-                style="margin-left: 5px"
               >
                 <!-- Clear Icon -->
                 <svg
@@ -269,7 +269,57 @@
             </div>
           </div>
 
-          <div class="container my-5 d-flex flex-row"></div>
+          <div class="container my-5 d-flex flex-row flex-wrap">
+            <button class="btn rounded-circle" onclick="addItem()">
+              <img src="images/shoppingListIcons/apple.png" alt="apple" class="shopping-item img-fluid">
+            </button>
+            <button class="btn rounded-circle" onclick="addItem()">
+              <img src="images/shoppingListIcons/bacon.png" alt="bacon" class="shopping-item img-fluid">
+            </button>
+            <button class="btn rounded-circle" onclick="addItem()">
+              <img src="images/shoppingListIcons/bananas.png" alt="bananas" class="shopping-item img-fluid">
+            </button>
+            <button class="btn rounded-circle" onclick="addItem()">
+              <img src="images/shoppingListIcons/bread.png" alt="bread" class="shopping-item img-fluid">
+            </button>
+            <button class="btn rounded-circle" onclick="addItem()">
+              <img src="images/shoppingListIcons/broccoli.png" alt="broccoli" class="shopping-item img-fluid">
+            </button>
+            <button class="btn rounded-circle" onclick="addItem()">
+              <img src="images/shoppingListIcons/butter.png" alt="butter" class="shopping-item img-fluid">
+            </button>
+            <button class="btn rounded-circle" onclick="addItem()">
+              <img src="images/shoppingListIcons/cereal.png" alt="cereal" class="shopping-item img-fluid">
+            </button>
+            <button class="btn rounded-circle" onclick="addItem()">
+              <img src="images/shoppingListIcons/cheese.png" alt="cheese" class="shopping-item img-fluid">
+            </button>
+            <button class="btn rounded-circle" onclick="addItem()">
+              <img src="images/shoppingListIcons/chicken.png" alt="chicken" class="shopping-item img-fluid">
+            </button>
+            <button class="btn rounded-circle" onclick="addItem()">
+              <img src="images/shoppingListIcons/cucumber.png" alt="cucumber" class="shopping-item img-fluid">
+            </button>
+            <button class="btn rounded-circle" onclick="addItem()">
+              <img src="images/shoppingListIcons/eggs.png" alt="eggs" class="shopping-item img-fluid">
+            </button>
+            <button class="btn rounded-circle" onclick="addItem()">
+              <img src="images/shoppingListIcons/lettuce.png" alt="lettuce" class="shopping-item img-fluid">
+            </button>
+            <button class="btn rounded-circle" onclick="addItem()">
+              <img src="images/shoppingListIcons/milk.png" alt="milk" class="shopping-item img-fluid">
+            </button>
+            <button class="btn rounded-circle" onclick="addItem()">
+              <img src="images/shoppingListIcons/sad-ice-cream-new.png" alt="ice-cream" class="shopping-item img-fluid">
+            </button>
+            <button class="btn rounded-circle" onclick="addItem()">
+              <img src="images/shoppingListIcons/toilet_paper.png" alt="toilet-paper" class="shopping-item img-fluid">
+            </button>
+            <button class="btn rounded-circle" onclick="addItem()">
+              <img src="images/shoppingListIcons/yogurt.png" alt="yogurt" class="shopping-item img-fluid">
+            </button>
+          
+          </div>
         </div>
         <!-- end right column -->
       </div>
