Add style to recommended items

--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -268,8 +268,8 @@
               </div>
             </div>
           </div>
-
-          <div class="container my-5 d-flex flex-row flex-wrap">
+          <h4 class="text-center my-3 text-muted ">Recommended Items</h4>
+          <div class="container d-flex flex-row flex-wrap">
             <button class="btn rounded-circle" onclick="addItem()">
               <img src="images/shoppingListIcons/apple.png" alt="apple" class="shopping-item img-fluid">
             </button>
