--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -373,6 +373,30 @@
                 </button>
               <p class="fs-6 font-extralight">Yogurt</p>
               </div>
+              <div class="d-flex flex-column text-center align-items-center">
+                <button class="btn rounded-circle recommended-item" data-item="Beef" type="button">
+                  <img src="images/shoppingListIcons/beef.png" alt="beef" class="shopping-item img-fluid">
+                </button>
+              <p class="fs-6 font-extralight">Beef</p>
+              </div>
+              <div class="d-flex flex-column text-center align-items-center">
+                <button class="btn rounded-circle recommended-item" data-item="Salmon" type="button">
+                  <img src="images/shoppingListIcons/salmon.png" alt="salmon" class="shopping-item img-fluid">
+                </button>
+              <p class="fs-6 font-extralight">Salmon</p>
+              </div>
+              <div class="d-flex flex-column text-center align-items-center">
+                <button class="btn rounded-circle recommended-item" data-item="Strawberry" type="button">
+                  <img src="images/shoppingListIcons/strawberry.png" alt="strawberry" class="shopping-item img-fluid">
+                </button>
+              <p class="fs-6 font-extralight">Strawberry</p>
+              </div>
+              <div class="d-flex flex-column text-center align-items-center">
+                <button class="btn rounded-circle recommended-item" data-item="Orange" type="button">
+                  <img src="images/shoppingListIcons/orange.png" alt="orange" class="shopping-item img-fluid">
+                </button>
+              <p class="fs-6 font-extralight">Orange</p>
+              </div>
           
           </div>
         </div>
