Change search form and button types

--- a/search.html
+++ b/search.html
@@ -109,10 +109,10 @@
             <a class="navbar-brand active" href="./main.html">
                 <img src="./images/hound_white.png" height="36" alt="" />
             </a>
-            <form class="d-flex me-auto" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search flyers or items"
-                    aria-label="Search" />
-                <button class="btn btn-success-light" type="submit">
+            <form class="d-flex me-auto">
+                <input id="searchBox" class="form-control me-2" name="item" type="text-form"
+                    placeholder="Search flyers or items" aria-label="Search" />
+                <button id="searchButton" class="btn btn-success-light" type="button">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="white"
                         stroke-linecap="round" stroke-linejoin="round" width="28" height="28" stroke-width="1.5">
                         <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
@@ -171,10 +171,10 @@
     <!------------------------------>
 
     <div class="container mx-auto">
-        <div id="deals-popup-here2"></div>
+        <div id="deals-popup-here"></div>
     </div>
     <div class="container">
-        <div id="deals-go-here2" class="row row-cols-auto  justify-content-center"></div>
+        <div id="deals-go-here" class="row row-cols-auto  justify-content-center"></div>
     </div>
 
     <footer class="navbar fixed-bottom d-md-none bg-success">
@@ -231,7 +231,8 @@
     <script src="./scripts/firebaseAPI_Team05.js"></script>
     <script src="./scripts/skeleton.js"></script>
     <script src="./scripts/script.js"></script>
-    <script src="./scripts/main.js"></script>
+    <!-- <script src="./scripts/main.js"></script> -->
+    <script src="./scripts/search.js"></script>
 </body>
 
 </html>
