Update items in shoppingList

--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -272,10 +272,10 @@
           <h4 class="text-center font-extralight my-3 text-muted ">Recommended Items</h4>
           <div class="container d-flex flex-row flex-wrap">
             <div class="d-flex flex-column text-center align-items-center">
-              <button id="addItemBtn" class="btn rounded-circle recommended-item" data-item="Apple" type="button">
+              <button class="btn rounded-circle recommended-item" data-item="Apples" type="button">
                 <img src="images/shoppingListIcons/apple.png" alt="apple" class="shopping-item img-fluid">
               </button>
-              <p class="fs-6 font-extralight">Apple</p>
+              <p class="fs-6 font-extralight">Apples</p>
               </div>
               <div class="d-flex flex-column text-center align-items-center">
                 <button class="btn rounded-circle recommended-item" data-item="Bacon" type="button">
@@ -290,13 +290,13 @@
               <p class="fs-6 font-extralight">Bananas</p>
               </div>
               <div class="d-flex flex-column text-center align-items-center">
-                <button class="btn rounded-circle recommended-item" data-item="Bacon" type="button">
+                <button class="btn rounded-circle recommended-item" data-item="Bread" type="button">
                   <img src="images/shoppingListIcons/bread.png" alt="bread" class="shopping-item img-fluid">
                 </button>
               <p class="fs-6 font-extralight">Bread</p>
               </div>
               <div class="d-flex flex-column text-center align-items-center">
-                <button class="btn rounded-circle recommended-item" data-item="Bacon" type="button">
+                <button class="btn rounded-circle recommended-item" data-item="Broccoli" type="button">
                   <img src="images/shoppingListIcons/broccoli.png" alt="broccoli" class="shopping-item img-fluid">
                 </button>
               <p class="fs-6 font-extralight">Broccoli</p>
@@ -308,10 +308,10 @@
               <p class="fs-6 font-extralight">Butter</p>
               </div>
               <div class="d-flex flex-column text-center align-items-center">
-                <button class="btn rounded-circle recommended-item" data-item="Cereal" type="button">
-                  <img src="images/shoppingListIcons/cereal.png" alt="cereal" class="shopping-item img-fluid">
+                <button class="btn rounded-circle recommended-item" data-item="Cereals" type="button">
+                  <img src="images/shoppingListIcons/cereal.png" alt="cereals" class="shopping-item img-fluid">
                 </button>
-              <p class="fs-6 font-extralight">Cereal</p>
+              <p class="fs-6 font-extralight">Cereals</p>
               </div>
               <div class="d-flex flex-column text-center align-items-center">
                 <button class="btn rounded-circle recommended-item" data-item="Cheese" type="button">
@@ -326,10 +326,10 @@
               <p class="fs-6 font-extralight">Chicken</p>
               </div>
               <div class="d-flex flex-column text-center align-items-center">
-                <button class="btn rounded-circle recommended-item" data-item="Cucumber" type="button">
-                  <img src="images/shoppingListIcons/cucumber.png" alt="cucumber" class="shopping-item img-fluid">
+                <button class="btn rounded-circle recommended-item" data-item="Cucumbers" type="button">
+                  <img src="images/shoppingListIcons/cucumber.png" alt="cucumbers" class="shopping-item img-fluid">
                 </button>
-              <p class="fs-6 font-extralight">Cucumber</p>
+              <p class="fs-6 font-extralight">Cucumbers</p>
               </div>
               <div class="d-flex flex-column text-center align-items-center">
                 <button class="btn rounded-circle recommended-item" data-item="Eggs" type="button">
@@ -362,10 +362,10 @@
               <p class="fs-6 font-extralight">Toilet Paper</p>
               </div>
               <div class="d-flex flex-column text-center align-items-center">
-                <button class="btn rounded-circle recommended-item" data-item="Tomato" type="button">
-                  <img src="images/shoppingListIcons/tomato.png" alt="tomato" class="shopping-item img-fluid">
+                <button class="btn rounded-circle recommended-item" data-item="Tomatoes" type="button">
+                  <img src="images/shoppingListIcons/tomato.png" alt="tomatoes" class="shopping-item img-fluid">
                 </button>
-                <p class="fs-6 font-extralight">Tomato</p>
+                <p class="fs-6 font-extralight">Tomatoes</p>
               </div>
               <div class="d-flex flex-column text-center align-items-center">
                 <button class="btn rounded-circle recommended-item" data-item="Yogurt" type="button">
@@ -386,16 +386,16 @@
               <p class="fs-6 font-extralight">Salmon</p>
               </div>
               <div class="d-flex flex-column text-center align-items-center">
-                <button class="btn rounded-circle recommended-item" data-item="Strawberry" type="button">
-                  <img src="images/shoppingListIcons/strawberry.png" alt="strawberry" class="shopping-item img-fluid">
+                <button class="btn rounded-circle recommended-item" data-item="Strawberries" type="button">
+                  <img src="images/shoppingListIcons/strawberry.png" alt="strawberries" class="shopping-item img-fluid">
                 </button>
-              <p class="fs-6 font-extralight">Strawberry</p>
+              <p class="fs-6 font-extralight">Strawberries</p>
               </div>
               <div class="d-flex flex-column text-center align-items-center">
-                <button class="btn rounded-circle recommended-item" data-item="Orange" type="button">
-                  <img src="images/shoppingListIcons/orange.png" alt="orange" class="shopping-item img-fluid">
+                <button class="btn rounded-circle recommended-item" data-item="Oranges" type="button">
+                  <img src="images/shoppingListIcons/orange.png" alt="oranges" class="shopping-item img-fluid">
                 </button>
-              <p class="fs-6 font-extralight">Orange</p>
+              <p class="fs-6 font-extralight">Oranges</p>
               </div>
           
           </div>
