Link to navigation js file

--- a/search.html
+++ b/search.html
@@ -103,14 +103,14 @@
 
     <!------------------------------>
     <!-- Your HTML Layout go here -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success mb-5">
         <div class="container-fluid">
             <!-- Brand -->
             <a class="navbar-brand active" href="./main.html">
                 <img src="./images/hound_white.png" height="36" alt="" />
             </a>
             <form class="d-flex me-auto">
-                <input id="searchBox" class="form-control me-2" name="item" type="text-form"
+                <input id="searchBox" class="form-control me-2" name="item" type="text"
                     placeholder="Search flyers or items" aria-label="Search" />
                 <button id="searchButton" class="btn btn-success-light" type="button">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="white"
@@ -232,6 +232,7 @@
     <script src="./scripts/skeleton.js"></script>
     <script src="./scripts/script.js"></script>
     <!-- <script src="./scripts/main.js"></script> -->
+    <script src="./scripts/navigateToSearch.js"></script>
     <script src="./scripts/search.js"></script>
 </body>
 
