--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -482,7 +482,7 @@
             </a>
             <a
               class="nav-link d-flex flex-column align-items-center"
-              href="profile.html"
+              href="profiles.html"
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
