--- a/profiles.html
+++ b/profiles.html
@@ -56,8 +56,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
       <div class="container-fluid">
         <!-- Brand -->
-        <a class="navbar-brand active" href="#">
-          <img src="./images/hound_white.png" height="36" alt="" />
+        <a class="navbar-brand active" href="main.html">
+          <img src="./images/hound_white.png" height="36" alt="logo" />
         </a>
         <form class="d-flex me-auto" role="search">
           <input
@@ -91,7 +91,7 @@
         >
           <ul class="navbar-nav d-none d-lg-flex">
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="shoppinglist.html">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   viewBox="0 0 24 24"
@@ -117,7 +117,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="favourites.html">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   viewBox="0 0 24 24"
