--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
         <div class="container-fluid">
             <!-- Brand -->
-            <a class="navbar-brand active" href="#">
+            <a class="navbar-brand active" href="./main.html">
                 <img src="./images/hound_white.png" height="36" alt="" />
             </a>
             <form class="d-flex me-auto" role="search">
@@ -138,7 +138,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav d-none d-lg-flex">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="./shoppinglist.html">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
                                 stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="28"
                                 height="28" stroke-width="1.5">
@@ -155,7 +155,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="./favourites.html">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
                                 stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="28"
                                 height="28" stroke-width="1">
@@ -223,7 +223,7 @@
                         </svg>
                         Home
                     </a>
-                    <a class="nav-link d-flex flex-column align-items-center" href="#">
+                    <a class="nav-link d-flex flex-column align-items-center" href="./shoppinglist.html">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                             stroke-linecap="round" stroke-linejoin="round" width="45" height="45" stroke-width="1.5">
                             <path d="M9 5h-2a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-12a2 2 0 0 0 -2 -2h-2">
@@ -236,7 +236,7 @@
                         </svg>
                         Shopping List
                     </a>
-                    <a class="nav-link d-flex flex-column px-5 align-items-center" href="#">
+                    <a class="nav-link d-flex flex-column px-5 align-items-center" href="./favourites.html">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                             stroke-linecap="round" stroke-linejoin="round" width="45" height="45" stroke-width="1">
                             <path d="M19.5 12.572l-7.5 7.428l-7.5 -7.428a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.5 6.572">
@@ -244,7 +244,7 @@
                         </svg>
                         Favourites
                     </a>
-                    <a class="nav-link d-flex flex-column align-items-center" href="#">
+                    <a class="nav-link d-flex flex-column align-items-center" href="./profiles.html">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                             stroke-linecap="round" stroke-linejoin="round" width="45" height="45" stroke-width="1">
                             <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0"></path>
