Add navigation to profile on main

--- a/main.html
+++ b/main.html
@@ -231,7 +231,7 @@
                         </svg>
                         Favourites
                     </a>
-                    <a class="nav-link d-flex flex-column align-items-center" href="#">
+                    <a class="nav-link d-flex flex-column align-items-center" href="./profiles.html">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                             stroke-linecap="round" stroke-linejoin="round" width="45" height="45" stroke-width="1">
                             <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0"></path>
