--- a/search.html
+++ b/search.html
@@ -103,7 +103,7 @@
 
     <!------------------------------>
     <!-- Your HTML Layout go here -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-success mb-5">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
         <div class="container-fluid">
             <!-- Brand -->
             <a class="navbar-brand active" href="./main.html">
@@ -170,12 +170,23 @@
     </nav>
     <!------------------------------>
 
-    <div class="container mx-auto">
-        <div id="deals-popup-here"></div>
-    </div>
-    <div class="container">
-        <div id="deals-go-here" class="row row-cols-auto  justify-content-center"></div>
-    </div>
+
+        <div class="container mx-auto">
+            <div id="deals-popup-here"></div>
+        </div>
+        <!-- <div class="sidebar">
+            <a class="active" href="#home">Home</a>
+            <a href="#news">News</a>
+            <a href="#contact">Contact</a>
+            <a href="#about">About</a>
+        </div> -->
+        <div class="d-flex flex-lg-row mainContainer">
+            <div class="container">
+                <div id="deals-go-here" class="row row-cols-auto mt-5 justify-content-center"></div>
+            </div>
+        </div>
+        <div id="no-results" class="d-flex justify-content-center"></div>
+
 
     <footer class="navbar fixed-bottom d-md-none bg-success">
         <div class="container-fluid d-flex justify-content-center">
