--- a/main.html
+++ b/main.html
@@ -54,7 +54,7 @@
             <button type="button" class="btn-close" aria-label="Close"></button>
             <div class="row my-auto">
                 <h1 class="card-item col">Item Title</h1>
-                <div class="col my-auto align-content-end"> 
+                <div class="col my-auto align-content-end">
                     <button id="saveItem" type="button" class="bg-white rounded-2"><svg
                             xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                             stroke="currentColor" class="size-6 " height="35px" weight="35px">
@@ -110,8 +110,8 @@
                 <img src="./images/hound_white.png" height="36" alt="" />
             </a>
             <form class="d-flex me-auto" role="search">
-                <input id="searchBox" class="form-control me-2" type="text" name="item" placeholder="Search flyers or items"
-                    aria-label="Search" />
+                <input id="searchBox" class="form-control me-2" type="text" name="item"
+                    placeholder="Search flyers or items" aria-label="Search" />
                 <button id="searchButton" class="btn btn-success-light" type="button">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="white"
                         stroke-linecap="round" stroke-linejoin="round" width="28" height="28" stroke-width="1.5">
@@ -119,6 +119,21 @@
                         <path d="M21 21l-6 -6"></path>
                     </svg>
                 </button>
+                <div class="dropdown">
+                    <button class="btn btn-success-light dropdown-toggle" type="button" id="filterDropdown"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="white"
+                            stroke-linecap="round" stroke-linejoin="round" width="28" height="28" stroke-width="1.5">
+                            <path d="M3 4h18l-7 10v4l-4 2v-6L3 4z"></path>
+                        </svg>
+                    </button>
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="filterDropdown">
+                        <li><a class="dropdown-item" href="#">Lowest Price</a></li>
+                        <li><a class="dropdown-item" href="#">Highest Discount</a></li>
+                        <li><a class="dropdown-item" href="#">Newest Deals</a></li>
+                        <li><a class="dropdown-item" href="#">Expiring Soon</a></li>
+                    </ul>
+                </div>
             </form>
 
             <!-- Collapsible menu-->
