--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -45,8 +45,9 @@
         <img src="./images/hound_white.png" height="36" alt="" />
       </a>
       <form class="d-flex me-auto" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search flyers or items" aria-label="Search" />
-        <button class="btn btn-success-light" type="submit">
+        <input id="searchBox" class="form-control me-2" type="text" name="item" placeholder="Search flyers or items"
+          aria-label="Search" />
+        <button id="searchButton" class="btn btn-success-light" type="button">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="white" stroke-linecap="round"
             stroke-linejoin="round" width="28" height="28" stroke-width="1.5">
             <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
@@ -378,6 +379,7 @@
   <script src="./scripts/ui.js"></script>
   <script src="./scripts/skeleton.js"></script>
   <script src="./scripts/script.js"></script>
+  <script src="./scripts/navigateToSearch.js"></script>
 </body>
 
 </html>
