--- a/search.html
+++ b/search.html
@@ -119,6 +119,21 @@
                         <path d="M21 21l-6 -6"></path>
                     </svg>
                 </button>
+                <div class="dropdown">
+                    <button class="btn btn-success-light dropdown-toggle" type="button" id="filterDropdown"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="white"
+                            stroke-linecap="round" stroke-linejoin="round" width="28" height="28" stroke-width="1.5">
+                            <path d="M3 4h18l-7 10v4l-4 2v-6L3 4z"></path>
+                        </svg>
+                    </button>
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="filterDropdown">
+                        <li><a class="dropdown-item" href="#">Lowest Price</a></li>
+                        <li><a class="dropdown-item" href="#">Highest Discount</a></li>
+                        <li><a class="dropdown-item" href="#">Newest Deals</a></li>
+                        <li><a class="dropdown-item" href="#">Expiring Soon</a></li>
+                    </ul>
+                </div>
             </form>
 
             <!-- Collapsible menu-->
@@ -171,21 +186,21 @@
     <!------------------------------>
 
 
-        <div class="container mx-auto">
-            <div id="deals-popup-here"></div>
-        </div>
-        <!-- <div class="sidebar">
+    <div class="container mx-auto">
+        <div id="deals-popup-here"></div>
+    </div>
+    <!-- <div class="sidebar">
             <a class="active" href="#home">Home</a>
             <a href="#news">News</a>
             <a href="#contact">Contact</a>
             <a href="#about">About</a>
         </div> -->
-        <div class="d-flex flex-lg-row mainContainer">
-            <div class="container">
-                <div id="deals-go-here" class="row row-cols-auto mt-5 justify-content-center"></div>
-            </div>
+    <div class="d-flex flex-lg-row mainContainer">
+        <div class="container">
+            <div id="deals-go-here" class="row row-cols-auto mt-5 justify-content-center"></div>
         </div>
-        <div id="no-results" class="d-flex justify-content-center"></div>
+    </div>
+    <div id="no-results" class="d-flex justify-content-center"></div>
 
 
     <footer class="navbar fixed-bottom d-md-none bg-success">
